[package]
name = "conserver"
version = "0.1.0"
edition = "2021"
license = "MIT"

# [lib]
# doctest = false

[features]
default = []
telegram = ["dep:teloxide"]

[dependencies]
log = "0.4.22"
directories = "5.0.1"
tempfile = "3.12.0"
flexi_logger = "0.29.0"
anyhow = "1.0.89"
semver = "1.0.23"
nestify = "0.3.3"
tap = "1.0.1"
serde_yml = "0.0.12"
git2 = "0.19.0"
owo-colors = "4.1.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.18", features = ["derive", "color"] }
serde = { version = "1.0.210", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
teloxide = { version = "0.13.0", optional = true }

# compression #
decompress = "0.6.0"
tar = "0.4.42"
flate2 = "1.0.34"

[build-dependencies]
build-data = "0.2.1"

[dev-dependencies]
test-context = "0.3.0"
